--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,10 @@
 <h1> <%=@article.title %> </h1>
-<p> <%=@article.body%> </p>
+<p> <%=@article.body%> </p><br><br>
+<h3>Comments(<%= @article.comments.size %>)</h3>
+<br><br>
+
+<%= render partial: 'articles/comment', collection: @article.comments %>
+<%= render partial: 'comments/form' %>
 <%=link_to "<< Back to Articles List", articles_path%>
 <%=link_to "Edit", edit_article_path(@article) %>
 <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "You sure?"}%>
