--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -14,4 +14,9 @@
 	<%= f.text_area :body %> 
 </p>
 <p> <%= f.submit %> </p>
+
+<p>
+	<%= f.label :tag_list %> <br />
+	<%= f.text_field :tag_list%>
+</p>
 <% end %>
